--- a/index.html
+++ b/index.html
@@ -17,16 +17,190 @@
         <h2 class="logo">SocialWeb</h2>
         <div class="search-bar">
           <i class="uil uil-search"></i>
-          <input type="search" placeholder="Search for ..." />
+          <input type="search" placeholder="Пошук когось/чогось ..." />
         </div>
         <div class="create">
-          <label for="create-post" class="btn btn-primary">Create</label>
+          <label for="create-post" class="btn btn-primary">Створити</label>
           <div class="profile-photo">
             <img src="images/photo.png" alt="profile" />
           </div>
         </div>
       </div>
     </nav>
+
+    <main>
+      <div class="container">
+        <div class="left">
+          <a href="#" class="profile">
+            <div class="profile-photo">
+              <img src="images/photo.png" alt="photo" />
+            </div>
+            <div class="handle">
+              <h4>Denny</h4>
+              <p class="text-muted">@denny</p>
+            </div>
+          </a>
+
+          <!-- SIDEBAR  -->
+          <div class="sidebar">
+            <a href="#" class="menu-item active">
+              <span><i class="uil uil-home"></i></span>
+              <h3>Головна</h3>
+            </a>
+            <a href="#" class="menu-item">
+              <span><i class="uil uil-compass"></i></span>
+              <h3>Серфінг</h3>
+            </a>
+            <a href="#" class="menu-item" id="notifications">
+              <span>
+                <i class="uil uil-bell">
+                  <small class="notification-count">9+</small>
+                </i>
+              </span>
+              <h3>Сповіщення</h3>
+              <!-- NOTIFICATIONS POPUP -->
+              <div class="notifications-popup">
+                <div>
+                  <div class="profile-photo small">
+                    <img src="images/profile-2.jpg" alt="profile-2" />
+                  </div>
+                  <div class="notification-body">
+                    <b>Artem Sokur</b> вподобав пост, де ви відмічені
+                    <small class="text-muted">1 годину тому</small>
+                  </div>
+                </div>
+                <div>
+                  <div class="profile-photo small">
+                    <img src="images/profile-3.jpg" alt="profile-3" />
+                  </div>
+                  <div class="notification-body">
+                    <b>Nazar Gaponiuk</b> коментував ваш пост
+                    <small class="text-muted">2 години тому</small>
+                  </div>
+                </div>
+                <div>
+                  <div class="profile-photo small">
+                    <img src="images/profile-4.jpg" alt="profile-4" />
+                  </div>
+                  <div class="notification-body">
+                    <b>Roma Terekhov</b> прийняв запит в друзі
+                    <small class="text-muted">1 день тому</small>
+                  </div>
+                </div>
+                <div>
+                  <div class="profile-photo small">
+                    <img src="images/profile-5.jpg" alt="profile-5" />
+                  </div>
+                  <div class="notification-body">
+                    <b>Vika Kaptanovska</b> коментувала пост, де ви відмічені
+                    <small class="text-muted">20 хвилин тому</small>
+                  </div>
+                </div>
+                <div>
+                  <div class="profile-photo small">
+                    <img src="images/profile-6.jpg" alt="profile-6" />
+                  </div>
+                  <div class="notification-body">
+                    <b>Lisa Kapustinska</b> коментувала ваш пост
+                    <small class="text-muted">40 секунд тому</small>
+                  </div>
+                </div>
+                <div>
+                  <div class="profile-photo small">
+                    <img src="images/profile-7.jpg" alt="profile-7" />
+                  </div>
+                  <div class="notification-body">
+                    <b>Vlad Tarasiuk</b> прийняв запит в друзі
+                    <small class="text-muted">1 годину тому</small>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="menu-item" id="messages-notifications">
+              <span
+                ><i class="uil uil-envelope-alt"
+                  ><small class="notification-count">6</small></i
+                ></span
+              >
+              <h3>Повідомлення</h3>
+            </a>
+            <a href="#" class="menu-item">
+              <span><i class="uil uil-bookmark"></i></span>
+              <h3>Закладки</h3>
+            </a>
+            <a href="#" class="menu-item">
+              <span><i class="uil uil-chart-line"></i></span>
+              <h3>Аналітика</h3>
+            </a>
+            <a href="#" class="menu-item">
+              <span><i class="uil uil-palette"></i></span>
+              <h3>Тема</h3>
+            </a>
+            <a href="#" class="menu-item">
+              <span><i class="uil uil-setting"></i></span>
+              <h3>Налаштування</h3>
+            </a>
+          </div>
+
+          <label for="create-post" class="btn btn-primary">Створити пост</label>
+        </div>
+
+        <div class="middle">
+          <div class="stories">
+            <div class="story">
+              <div class="profile-photo">
+                <img src="images/profile-8.jpg" alt="profile-8" />
+              </div>
+              <p class="name">Ваша історія</p>
+            </div>
+            <div class="story">
+              <div class="profile-photo">
+                <img src="images/profile-9.jpg" alt="profile-9" />
+              </div>
+              <p class="name">Назар Гапонюк</p>
+            </div>
+            <div class="story">
+              <div class="profile-photo">
+                <img src="images/profile-10.jpg" alt="profile-10" />
+              </div>
+              <p class="name">Віка Каптановска</p>
+            </div>
+            <div class="story">
+              <div class="profile-photo">
+                <img src="images/profile-11.jpg" alt="profile-11" />
+              </div>
+              <p class="name">Артем Сокур</p>
+            </div>
+            <div class="story">
+              <div class="profile-photo">
+                <img src="images/profile-12.jpg" alt="profile-12" />
+              </div>
+              <p class="name">Міша Крутій</p>
+            </div>
+            <div class="story">
+              <div class="profile-photo">
+                <img src="images/profile-13.jpg" alt="profile-13" />
+              </div>
+              <p class="name">Діма Лещенко</p>
+            </div>
+          </div>
+
+          <form action="#" class="create-post">
+            <div class="profile-photo">
+              <img src="images/photo.png" alt="profile" />
+            </div>
+            <input
+              type="text"
+              placeholder="Що у вас в думках, Denny?"
+              id="create-post"
+            />
+            <input type="submit" value="Опублікувати" class="btn btn-primary" />
+          </form>
+        </div>
+
+        <div class="right"></div>
+      </div>
+    </main>
 
     <script src="index.js"></script>
   </body>
