write styles for stories element

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="container">
         <div class="left">
           <a href="#" class="profile">
-            <div class="profile-photo">
+            <div class="profile-photo small">
               <img src="images/photo.png" alt="photo" />
             </div>
             <div class="handle">
@@ -148,37 +148,37 @@
         <div class="middle">
           <div class="stories">
             <div class="story">
-              <div class="profile-photo">
+              <div class="profile-photo small">
                 <img src="images/profile-8.jpg" alt="profile-8" />
               </div>
               <p class="name">Ваша історія</p>
             </div>
             <div class="story">
-              <div class="profile-photo">
+              <div class="profile-photo small">
                 <img src="images/profile-9.jpg" alt="profile-9" />
               </div>
               <p class="name">Назар Гапонюк</p>
             </div>
             <div class="story">
-              <div class="profile-photo">
+              <div class="profile-photo small">
                 <img src="images/profile-10.jpg" alt="profile-10" />
               </div>
-              <p class="name">Віка Каптановска</p>
+              <p class="name">Віка Kavi</p>
             </div>
             <div class="story">
-              <div class="profile-photo">
+              <div class="profile-photo small">
                 <img src="images/profile-11.jpg" alt="profile-11" />
               </div>
               <p class="name">Артем Сокур</p>
             </div>
             <div class="story">
-              <div class="profile-photo">
+              <div class="profile-photo small">
                 <img src="images/profile-12.jpg" alt="profile-12" />
               </div>
               <p class="name">Міша Крутій</p>
             </div>
             <div class="story">
-              <div class="profile-photo">
+              <div class="profile-photo small">
                 <img src="images/profile-13.jpg" alt="profile-13" />
               </div>
               <p class="name">Діма Лещенко</p>
@@ -186,7 +186,7 @@
           </div>
 
           <form action="#" class="create-post">
-            <div class="profile-photo">
+            <div class="profile-photo small">
               <img src="images/photo.png" alt="profile" />
             </div>
             <input
