--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
               <div class="notifications-popup">
                 <div>
                   <div class="profile-photo small">
-                    <img src="images/profile-2.jpg" alt="profile-2" />
+                    <img src="images/photo4.jpg" alt="profile-2" />
                   </div>
                   <div class="notification-body">
-                    <b>Артем Сокур</b> вподобав пост, де ви відмічені
+                    <b>Міша Крутій</b> вподобав пост, де ви відмічені
                     <small class="text-muted">1 годину тому</small>
                   </div>
                 </div>
                 <div>
                   <div class="profile-photo small">
-                    <img src="images/profile-3.jpg" alt="profile-3" />
+                    <img src="images/photo6.jpg" alt="profile-3" />
                   </div>
                   <div class="notification-body">
                     <b>Назар Гапонюк</b> коментував ваш пост
@@ -80,7 +80,7 @@
                 </div>
                 <div>
                   <div class="profile-photo small">
-                    <img src="images/profile-4.jpg" alt="profile-4" />
+                    <img src="images/photo7.jpg" alt="profile-4" />
                   </div>
                   <div class="notification-body">
                     <b>Рома Терехов</b> прийняв запит в друзі
@@ -89,7 +89,7 @@
                 </div>
                 <div>
                   <div class="profile-photo small">
-                    <img src="images/profile-5.jpg" alt="profile-5" />
+                    <img src="images/photo2.jpg" alt="profile-5" />
                   </div>
                   <div class="notification-body">
                     <b>Віка Каві</b> коментувала пост, де ви відмічені
@@ -98,16 +98,16 @@
                 </div>
                 <div>
                   <div class="profile-photo small">
-                    <img src="images/profile-6.jpg" alt="profile-6" />
+                    <img src="images/photo8.jpg" alt="profile-6" />
                   </div>
                   <div class="notification-body">
-                    <b>Лена Капустинська</b> коментувала ваш пост
+                    <b>Каріна </b> коментувала ваш пост
                     <small class="text-muted">40 секунд тому</small>
                   </div>
                 </div>
                 <div>
                   <div class="profile-photo small">
-                    <img src="images/profile-7.jpg" alt="profile-7" />
+                    <img src="images/photo3.jpg" alt="profile-7" />
                   </div>
                   <div class="notification-body">
                     <b>Влад Тарасюк</b> прийняв запит в друзі
@@ -116,7 +116,7 @@
                 </div>
               </div>
             </a>
-            <a href="#" class="menu-item" id="messages-notifications">
+            <a href="#" class="menu-item" id="messages-notification">
               <span>
                 <i class="uil uil-envelope-alt">
                   <small class="notification-count">6</small>
@@ -132,7 +132,7 @@
               <span><i class="uil uil-chart-line"></i></span>
               <h3>Аналітика</h3>
             </a>
-            <a href="#" class="menu-item">
+            <a href="#" class="menu-item" id="theme">
               <span><i class="uil uil-palette"></i></span>
               <h3>Тема</h3>
             </a>
@@ -583,6 +583,58 @@
         </div>
       </div>
     </main>
+
+    <div class="customize-theme">
+      <div class="card">
+        <h2>Налаштуйте вашу тему</h2>
+        <p class="text-muted">
+          Управляйте вашим розміром шрифту, кольором на бекграундом
+        </p>
+
+        <div class="font-size">
+          <h4>Розмір шрифту</h4>
+          <div>
+            <div class="choose-size">
+              <span class="font-size-1"></span>
+              <span class="font-size-2"></span>
+              <span class="font-size-3 active"></span>
+              <span class="font-size-4"></span>
+              <span class="font-size-5"></span>
+            </div>
+            <h3>Aa</h3>
+          </div>
+        </div>
+
+        <div class="color">
+          <h4>Колір</h4>
+          <div class="choose-color">
+            <span class="color-1 active"></span>
+            <span class="color-2"></span>
+            <span class="color-3"></span>
+            <span class="color-4"></span>
+            <span class="color-5"></span>
+          </div>
+        </div>
+
+        <div class="background">
+          <h4>Бекграунд</h4>
+          <div class="choose-bg">
+            <div class="bg-1 active">
+              <span></span>
+              <h5>Light</h5>
+            </div>
+            <div class="bg-2">
+              <span></span>
+              <h5>Dim</h5>
+            </div>
+            <div class="bg-3">
+              <span></span>
+              <h5>Lights Out</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="index.js"></script>
   </body>
